[package]
name = "threads"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
tokio = { version = "1.41.1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133 "
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
log = "0.4.22"
dotenvy = "0.15.7"
rand = "0.8.5"
image = "0.25.5"
log4rs = "1.3.0"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Use Link Time Optimization.
codegen-units = 1   # Compile the whole crate at once.
debug = false       # Strip debug symbols from the binary.
